Adding remove button to filter. Position suggest field below input

--- a/food_record/app/assets/javascripts/templates/views/suggest-input.jst.ejs
+++ b/food_record/app/assets/javascripts/templates/views/suggest-input.jst.ejs
@@ -1,5 +1,6 @@
 <div class="icon"></div>
 <label>+</label>
-<input />
 <div class="suggest-field"></div>
+<input />
+<div class="close"></div>
 <div class="drop-down"></div>
