Added starter food input panel. Removed some cache files for sphinx and vim that got committed.  Moved stylesheet/views/* files to stylesheet to fix production image style problem

--- a/app/assets/stylesheets/view-search.scss
+++ b/app/assets/stylesheets/view-search.scss
@@ -1,12 +1,12 @@
 .app-view-search {
   padding: 10px;
-}
 
-.app-view-search .unified-search {
-  text-align: center;
-  padding-bottom: 20px;
-}
-
-.app-view-search .results {
-  min-height: 500px;
+  .unified-search {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+  
+  .results {
+    min-height: 500px;
+  }
 }
