--- a/app/assets/stylesheets/view-suggest-input.scss
+++ b/app/assets/stylesheets/view-suggest-input.scss
@@ -120,7 +120,7 @@ $icon-margin: $height - 16;
       margin: $icon-margin / 2;
       width: 16px;
       height: 16px;
-      background: url('/assets/icons.png') 0px -80px;
+      background: url('icons.png') 0px -80px;
 
       &:hover {
         @include opacity(0.75);
@@ -137,22 +137,22 @@ $icon-margin: $height - 16;
 
   &.food .icon {
     width: 16px;
-    background: url('/assets/icons.png') 0px -16px;
+    background: url('icons.png') 0px -16px;
   }
 
   &.filter .icon {
     width: 16px;
-    background: url('/assets/icons.png') 0px -32px;
+    background: url('icons.png') 0px -32px;
   }
 
   &.company .icon {
     width: 16px;
-    background: url('/assets/icons.png') 0px -48px;
+    background: url('icons.png') 0px -48px;
   }
 
   &.food-group .icon {
     width: 16px;
-    background: url('/assets/icons.png') 0px -64px;
+    background: url('icons.png') 0px -64px;
   }
 
 }
