--- a/app/assets/stylesheets/view-suggest-item.scss
+++ b/app/assets/stylesheets/view-suggest-item.scss
@@ -24,19 +24,19 @@ $icon-margin: $height - 16;
   }
 
   &.food .icon {
-    background: url('/assets/icons.png') 0px -16px;
+    background: url('icons.png') 0px -16px;
   }
 
   &.filter .icon {
-    background: url('/assets/icons.png') 0px -32px;
+    background: url('icons.png') 0px -32px;
   }
 
   &.company .icon {
-    background: url('/assets/icons.png') 0px -48px;
+    background: url('icons.png') 0px -48px;
   }
 
   &.food-group .icon {
-    background: url('/assets/icons.png') 0px -64px;
+    background: url('icons.png') 0px -64px;
   }
 
   .text {
