--- a/app/assets/javascripts/templates/views/nav.jst.ejs
+++ b/app/assets/javascripts/templates/views/nav.jst.ejs
@@ -1,12 +1,12 @@
 <div class="title">Kiris</div>
 <div class="inline-nav">
-  <ul><li>Search</li><li>Add</li></ul>
+  <ul><li><a href="#search">Search</a></li><li><a href="#edit/food">Add</a></li></ul>
 </div>
 <div class="dropdown-nav">
   <label>Account</label>
   <ul>
-    <li>Settings</li>
-    <li>Logout</li>
+    <li><a href="#settings">Settings</a></li>
+    <li><a href="#logout">Logout</a></li>
   </ul>
 </div>
 
