--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,4 @@
-@import "compass/css3";
+@import 'compass/css3/box-shadow';
 
 body {
   font-family: helvetica, arial, verdana;
@@ -8,8 +8,7 @@ body {
   margin: 0 auto;
   width: 700px;
   background: #defa70;
-  -webkit-box-shadow: 0px 0px 20px rgba(0,0,0,.50);
-  box-shadow: 0px 0px 20px rgba(0,0,0,.50);
+  @include box-shadow(rgba(0,0,0,.5) -1px 1px 3px 0);
 }
 
 h1 {
