--- a/app/assets/javascripts/templates/views/food-input.jst.ejs
+++ b/app/assets/javascripts/templates/views/food-input.jst.ejs
@@ -1,17 +1,19 @@
 <h2>Food <%= food.isNew() ? 'Add' : 'Edit' %></h2>
-<label for="name">Name</label><input id="name" /><br />
-<label for="company">Company</label><input id="company" /><br />
-<label for="amount">Amount</label><input id="amount" />
-<select id="unit">
-<% App.Data.Units.each(function(unit) { %>
-  <option value="<%= unit.id %>"><%= unit.get('abbv') %></option>
-<% }); %>
-</select><br />
-<label for="calories">Calories</label><input id="calories" /><br />
-<label for="fat_calories">Fat Calories</label><input id="fat_calories" /><br />
-<label for="food_group">Food Group</label><select id="food_group">
-<% App.Data.FoodGroups.each(function(food_group) { %>
-  <option value="<%= food_group.id %>"><%= food_group.get('name') %></option>
-<% }); %>
-</select><br />
-<input type="button" class="commit" value="Create" />
+<form autocomplete="off">
+  <label for="name">Name</label><input id="name" value="<%= food.get('name') %>" /><br />
+  <label for="company">Company</label><input id="company" value="<%= food.get('company') %>" disabled /><br />
+  <label for="amount">Amount</label><input id="amount" value="<%= food.get('amount') %>" />
+  <select id="unit">
+  <% App.Data.Units.each(function(unit) { %>
+    <option value="<%= unit.id %>"<%= food.get('unit_id') == unit.id ? ' selected' : '' %>><%= unit.get('abbv') %></option>
+  <% }); %>
+  </select><br />
+  <label for="calories">Calories</label><input id="calories" value="<%= food.get('calories') %>" /><br />
+  <label for="fat_calories">Fat Calories</label><input id="fat_calories" value="<%= food.get('fat_calories') %>" /><br />
+  <label for="food_group">Food Group</label><select id="food_group">
+  <% App.Data.FoodGroups.each(function(food_group) { %>
+    <option value="<%= food_group.id %>"<%= food.get('food_group_id') == food_group.id ? ' selected' : '' %>><%= food_group.get('name') %></option>
+  <% }); %>
+  </select><br />
+  <input type="button" class="commit" value="<%= food.isNew() ? 'Create' : 'Save' %>" />
+</form>
