--- a/app/assets/stylesheets/view-suggest-input.scss
+++ b/app/assets/stylesheets/view-suggest-input.scss
@@ -7,14 +7,17 @@ $icon-margin: $height - 16;
 
 .app-view-suggest-input {
   @include border-radius(6px, 6px);
+  background: rgba(255,255,255,.9);
   height: $height;
   line-height: $height;
-  border: 1px solid rgba(0,0,0,.3);
+  border: 0;
   display: inline-block;
   padding-right: 10px;
-  margin-right: 10px;
+  margin: 0 10px 10px 0;
   position: relative;
   cursor: text;
+  @include box-shadow(rgba(0,0,0,.5) -1px 1px 3px 0 inset,
+    rgba(255,255,255,.75) 0 1px 0 0);
 
   .drop-down {
     width: 300px;
@@ -68,6 +71,11 @@ $icon-margin: $height - 16;
   &.add {
     cursor: pointer;
     background: rgba(0,255,0,.3);
+    @include box-shadow(rgba(0, 0, 0, 0.5) -1px 1px 3px 0);
+
+    &:active {
+      @include box-shadow(rgba(0, 0, 0, 0.5) 0 0 0 0);
+    }
 
     .icon {
       margin: 0 10px 0 0;
@@ -90,14 +98,18 @@ $icon-margin: $height - 16;
   }
 
   &.hasFocus {
-    @include single-box-shadow(rgba(255, 186, 0, .5), 0px, 0px, 5px, 0px, inset);
-    border-color: rgba(255, 186, 0, .5);
+    @include box-shadow(rgba(255,186,0,1) 0 0 5px 1px inset,
+      rgba(255,255,255,.75) 0px 1px 0 0);
   }
 
   &.compact {
-    border: 1px solid rgba(0,0,0,.3);
-    background: rgba(0,0,255,.3);
+    background: rgba(200,200,200,1);
     cursor: pointer;
+    @include box-shadow(rgba(0, 0, 0, 0.5) -1px 1px 3px 0);
+
+    &:active {
+/*      @include box-shadow(rgba(0, 0, 0, 0.5) 0 0 0 0);*/
+    }
 
     label {
       display: inline;
@@ -118,6 +130,7 @@ $icon-margin: $height - 16;
       right: 0;
       display: block;
       margin: $icon-margin / 2;
+      margin-left: 5px;
       width: 16px;
       height: 16px;
       background: url('icons.png') 0px -80px;
