--- a/app/assets/stylesheets/view-food-input.scss
+++ b/app/assets/stylesheets/view-food-input.scss
@@ -4,7 +4,7 @@
 
 .app-view-food-input {
   min-height: 500px;
-  width: 500px;
+  width: 550px;
   margin: 10px auto;
   /*background: rgba(255,255,255,.90);
   @include border-radius(4px, 4px);*/
@@ -44,6 +44,11 @@
         rgba(255,255,255,.75) 0px 1px 0 0);
       outline: none;
     }
+
+    &.error {
+      @include box-shadow(rgba(255,0,0,.5) 0 0 5px 2px inset,
+        rgba(255,255,255,.75) 0 1px 0 0);
+    }
   }
 
   select {
@@ -59,6 +64,16 @@
     &:active {
       @include box-shadow(rgba(0, 0, 0, 0.5) 0 0 0 0);
     }
+
+    &.disabled {
+      color: rgba(0,0,0,.2);
+      @include box-shadow(rgba(0, 0, 0, 0.5) 0 0 0 0);
+    }
+  }
+
+  .msg {
+    color: rgba(255,0,0,.5);
+    font-weight: bold;
   }
 
   #calories,
