--- a/app/assets/stylesheets/view-suggest-input.scss
+++ b/app/assets/stylesheets/view-suggest-input.scss
@@ -13,7 +13,7 @@ $icon-margin: $height - 16;
   border: 0;
   display: inline-block;
   padding-right: 10px;
-  margin: 0 10px 10px 0;
+  margin: 0 5px 10px 5px;
   position: relative;
   cursor: text;
   @include box-shadow(rgba(0,0,0,.5) -1px 1px 3px 0 inset,
