--- a/app/assets/stylesheets/view-unified-search.scss
+++ b/app/assets/stylesheets/view-unified-search.scss
@@ -5,8 +5,5 @@
 .app-view-unified-search {
   padding: 5px;
   margin-bottom: 10px;
-
-  .filter-plate {
-    float: left;
-  }
+  text-align: center;
 }
