--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -16,6 +16,15 @@ h1 {
   color: rgba(0,0,0,.75);
 }
 
+@mixin panel-header {
+  font-size: 1.5em;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px 0;
+  margin-bottom: 10px;
+  color: rgba(0,0,0,.75);
+}
+
 .clear-both {
   clear: both;
 }
