Chaning suggest input to be more universal.  Unified search is using the old version while a new is being worked out.  Work in progress.

--- a/app/assets/javascripts/templates/views/food-input.jst.ejs
+++ b/app/assets/javascripts/templates/views/food-input.jst.ejs
@@ -4,8 +4,8 @@
   <input id="name" value="<%= food.escape('name') %>" />
   <span class="name msg"></span><br />
 
-  <label for="company">Company</label>
-  <input id="company" value="<%= food.escape('company') %>" disabled />
+  <label class="div-label" for="company">Company</label>
+  <div id="company_id" data-category="company" data-value="<%= food.escape('company_id') %>" data-categories='["company"]'></div>
   <span class="company msg"></span><br />
 
   <label for="amount">Amount</label>
